# coral

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SOURCES_MANAGEMENT_PLAN.md  deny.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: build-timings.yml  release-please.yml  release.yml  validate.yml
crates/coral-api/: build.rs
crates/coral-app/: Cargo.toml  build.rs
crates/coral-cli/: Cargo.toml  build.rs
crates/coral-client/: Cargo.toml
crates/coral-code-mode/: Cargo.toml
crates/coral-code-mode/src/: description.rs  lib.rs  response.rs  service.rs
crates/coral-code-mode/src/runtime/: callbacks.rs  globals.rs  mod.rs  module_loader.rs  value.rs
crates/coral-engine/: AGENTS.md  Cargo.toml
crates/coral-mcp/: AGENTS.md  Cargo.toml
crates/coral-mcp/src/: bridge.rs  code_mode.rs  guide_template.md  lib.rs  server.rs  telemetry.rs  tests.rs
crates/coral-mcp/src/surface/: catalog.rs  discovery.rs  errors.rs  mod.rs  resources.rs  search.rs  tools.rs  values.rs
crates/coral-spec/: AGENTS.md  Cargo.toml  build.rs
crates/coral-spec/proto/coral/spec/v1/: source.proto
crates/coral-spec/src/: common.rs  endpoints.rs  inputs.rs  lib.rs  loader.rs  openapi.rs  parser.rs  projection.rs  proto.rs  proto_normalize.rs  proto_serde.rs  proto_source.rs  proto_validate.rs  schema.rs  source_model.rs  template.rs  validate.rs
crates/coral-spec/src/backends/: file.rs  http.rs  mcp.rs  mod.rs  source_model.rs
crates/coral-spec/src/schema/: source_manifest.schema.json
crates/coral-spec/src/types/: mod.rs  projection.rs  source.rs
design/: codemode-port.md
docs/: docs.json  index.mdx  legal.mdx
docs/getting-started/: installation.mdx  quickstart.mdx
docs/guides/: observe-with-opentelemetry.mdx  use-coral-over-mcp.mdx  write-a-custom-source.mdx
docs/legal/: cla-corporate.md  cla-individual.md
docs/project/: architecture.mdx  changelog.mdx  roadmap.mdx  security.mdx
docs/reference/: bundled-sources.mdx  cli-reference.mdx  community-sources.mdx  source-spec-reference.mdx
plans/: 2026-05-19-source-dsl-v4-prd.md  2026-05-24-dsl-v4-prd.md  2026-05-27-identity-prd.md  source-470-column-statistics.md
prds/: source-dsl-v4-prd.md
scripts/: install.sh
sources/attio/: manifest.yaml
sources/mlflow/: manifest.yaml
ui/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.tests.json
ui/src/: App.tsx  main.ts  styles.css
xtask/src/: detect.rs  (+4 more)
(+313 files in other folders)
