[package]
name = "coral-code-mode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
code-mode = [
    "dep:async-channel",
    "dep:async-trait",
    "dep:deno_core_icudata",
    "dep:tokio",
    "dep:tokio-util",
    "dep:v8",
]

[dependencies]
async-channel = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
deno_core_icudata = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
v8 = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1"
tokio.workspace = true
