[package]
name = "coral-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
url.workspace = true

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3"

[dev-dependencies]
tracing.workspace = true
